# tom_opm_classifications

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
classifications/: models.py
tom_classifications/: apps.py  models.py
tom_classifications/commands/: agreement.py  confusion.py  find_unknown.py  merge_broker_targets.py  merge_methods.py  unk_breakdown.py
tom_classifications/data/: SIMBAD_otypes_labels.txt  broker_codes.txt  variability.txt
tom_classifications/migrations/: 0001_initial.py  0002_targetclassification_transient.py
tom_classifications/templates/tom_classifications/partials/: classif_sun.html
tom_classifications/templates/tom_targets/: target_detail.html
tom_classifications/templates/tom_targets/partials/: classif_scatter.html
tom_classifications/templatetags/: classification_plots.py
